--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,6 @@ services:
     labels:
     - com.yourdomain.project.id=6887b9547b777ab4272be7c8
     - com.yourdomain.project.id=6887bc7bbca9835469a30f7c
+    - com.yourdomain.project.id=6887bd314c1bf36f7b3013ca
     ports:
     - - '80'
